# webapi-testing

./: .gitignore  LICENSE  README.md  analysis.md  generate-all-apps-notes.md  generate-apps.ps1  pyproject.toml
.github/agents/: skill-eval.agent.md
.github/prompts/: analyze.md  copilot-cli-resource-usage-deep-research.prompt.md  create-all-apps.md  create-app-plan-files.md  create-script.md  generalize.md  generate-apps.md  plan-auto-improve.md  plan-multi-run.md  plan-single-scenario-rich-report.md  plan-token-usage.md  plan-update-dimensions01.md  plan-update-framework.md  research.md  research_report_20260327_ai_code_eval_methods.md  standalone-cli-plan.md
docs/: agent-guide.md  architecture.md  authoring-guide.md
examples/aspnet-razor-pages/: eval.yaml  run-pipeline.ps1
examples/aspnet-webapi/: eval.yaml  run-pipeline.ps1
research/compete/: copilot-skill-eval-vs-waza.md
research/copilot-cli-resource-usage/: copilot-cli-authoring-prompt.md  copilot-cli-evaluator-architecture.md  copilot-cli-evidence-model.md  copilot-cli-observability-matrix.md  copilot-cli-resource-usage-report.md  copilot-cli-resource-usage-summary.md  copilot-cli-validation-plan.md
research/plugin-best-practices/: copilot-plugin-checklist.md  copilot-plugin-repo-template.md  plugins-best-practices-report.md  plugins-best-practices-summary.md  sources.md
src-dotnet-webapi/: gen-notes.md
src-no-skills/: gen-notes.md
templates/: .editorconfig  Directory.Build.props  analyze.md.j2  create-all-apps.md.j2  create-single-app.md.j2  scenario.prompt.md.j2  suggest-improvements.md.j2
(+2710 files in other folders)
